<resources>
    <string name="app_name">Tarea2:English</string>
    <string name="TituloBicilceta">Bintage Bicycle</string>
    <string name="Color">COLOR</string>
    <string name="Descripción">DESCRIPTION</string>
    <string name="Parrafo1">Custom lightweight steel frame. Unrestored in beutiful original condition. Lightly used and well kept. Full super record build.</string>
    <string name="Measurent">MEASURENT</string>
    <string name="Parrafo2">Lorem ipsum dolor silt amet, consectur adiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venian, quis nostrud exercitation ulamco labors nisi ut aliquip ex ea commodo consequat. Dus aute iure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiant nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in qui officia deserunt mollit anim id est laborum.</string>
    <string name="add">ADD TO CART</string>
</resources>
